# homeAPP_server

./: .gitignore  CMakeLists.txt
config/: homeAppConfig.json
doc/: jsonMsgType.json  jsonMsgType.md
include/: AppUser.h  dbsql.h  homeAppComm.h  homeAppCore.h  homeAppSys.h
src/: dbsql.cpp  homeAppComm.cpp  homeAppCore.cpp  homeAppSys.cpp
test/: aestest.cpp  dotaskTest.cpp  server.cpp
